crates/vescpkg-rs/tests/ui/rpm_semantics_not_interchangeable.stderr
error[E0308]: mismatched types
 --> tests/ui/rpm_semantics_not_interchangeable.rs:8:26
  |
8 |     set_electrical_speed(mechanical);
  |     -------------------- ^^^^^^^^^^ expected `ElectricalSpeed`, found `MechanicalSpeed`
  |     |
  |     arguments to this function are incorrect
  |
note: function defined here
 --> tests/ui/rpm_semantics_not_interchangeable.rs:3:4
  |
3 | fn set_electrical_speed(_: ElectricalSpeed) {}
  |    ^^^^^^^^^^^^^^^^^^^^ ------------------
